checkit/config_dsl.grammar.peg
start           <- ( Line )+ EndOfFile
Line            <- Tagline               { incrlineno(); tagline(); }
                / Comment                { incrlineno(); commentline(); }
                / SpaceLine              { incrlineno(); }
                / < . >                  { rule_should_not_occure(yytext[0]); }
Comment         <- '#' ( !EndOfLine . )* EndOfLine
Tagline         <- Tag Semicolon Requirements Semicolon Values EndOfLine { rule_addtag_config(); }
Tag             <- < Number > { 
                        int tag = atoi(yytext);
                        /* rule_tagorder_in_dsl( tag ); */
                        settag( tag );
                } 
TagReference    <- Number       
Semicolon       <- ';' ( Space )*
Requirements    <- 'mandatory'           { set_mandatory(); }
                / OptionalDepends        { set_ifdepends(); }
                / 'optional'             { set_optional(); } 
OptionalDepends <- 'depends(' TagReference '.' ValueReference ')'
Values          <- Range
                / LogicalOr
                / Any
                / Only
#                / RegEx 
Range           <- 'range(' Number Colon Number ')' { set_range();}
Number          <- < ( Digit )+ >        {i_push(atol(yytext) );}
Colon           <- ',' (Space )* 
LogicalOr       <- 'logical_or(' ValueList ')'      { set_logical_or(); } 
ValueList       <- Value (Colon Value)*
Value           <- Number { incr_values(); }
ValueReference  <- Number
                 / 'any'                            { set_any_reference(); } 
#                / String
Only            <- 'only(' ValueList ')'                { set_only(); }
#RegEx           <- 'regex(' ( . )+                 { printf ("Regex not supported yet\n"); }
SpaceLine       <- Space? EndOfLine
Space           <- ' ' / '\t' 
Any             <- 'any'                            { set_any(); }
Digit           <- [0-9]
#String          <- '"' < ( [A-Za-z0-9- :] )* > '"'  { s_push ( yytext ); }
EndOfLine       <- '\r\n' / '\n' / '\r'             { printf ("EOL found\n"); }
EndOfFile       <- !.
